# smol-experiments

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: SmoLM.ipynb  SmoLMoE.ipynb
scripts/: 01_train_sft.py  02_train_dpo.py  03_train_cpo.py  04_train_moe_specialization.py  04_upcycle_to_moe.py  05_train_moe_pretraining.py  06_train_specialization.py  07_analyze_routing.py  08_plot_metrics.py  modal_artifacts.py  run_experiment.py
src/: __init__.py  checkpoint.py  config.py  data.py  evaluation.py  losses.py  metrics.py  modeling_dense.py  modeling_moe.py  trainers.py  upcycling.py  utils.py  visualization.py
src/data/: __init__.py  gec.py  preference.py  pretraining.py  specialization.py
src/models/: __init__.py  components.py  dense.py  moe.py
tests/: test_checkpoint.py  test_gec.py  test_losses.py  test_metrics.py  test_modal_artifacts.py  test_moe_smoke.py  test_run_experiment.py  test_utils.py  test_visualization.py
viz/: README.md  routing_dashboard.html  training_dashboard.html
